--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Templte title</title>
+    <title>Counter Point</title>
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
     <!-- CSS only -->
     <!-- Font Awesome -->
@@ -13,56 +13,13 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
     <!-- MDB -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/4.3.0/mdb.min.css" rel="stylesheet"/>
-    <style>
-        body {
-            margin: 0;
-            display: flex;
-            flex-direction: column;
-            min-height: 100vh;
-        }
-
-        
-        #search-pane {
-            height: 200px;
-            background-color: white;
-        }
-
-        img {
-            width: 150px;
-            height: 150px;
-            position: absolute;
-            margin: 2px;
-        }
-
-        #search-container {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 100%;
-        }
-
-        .search-group {
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            justify-content: center;
-            /* give it a height to make it in the middle */
-            height: 100%;
-        }
-
-        #result-pane {
-            flex: 1;
-        }
-
-        #search-input {
-            width: 30%;
-        }
-
-    </style>
+    <link href="../static/index.css" rel="stylesheet">
 </head>
 <body>
     <div id="search-pane">
-      <img src="../static/logo.png" alt="Just our team logo">
+      <div id="main-logo">
+        <img src="../static/logo_landscape_crop.png" alt="Just our team logo">
+      </div>
       <div id="search-container">
         <input id="search-input" class="form-control" id="typeURL" type="text"  placeholder="Search Url" required>
         <button id="search-btn" class="btn btn-success" type="submit"><i class="fa fa-search"></i></button>
@@ -72,10 +29,11 @@
         <table id="result-table" class="table table-hover">
             <thead class="table-dark">
               <tr>
-                <th scope="col"><b>URL</b></th>
-                <th scope="col"><b>Accuracy</b></th>
-                <th scope="col"><b>Accuracy Number</b></th>
-                <th scope="col"><b>Political Leaning</b></th>
+                <th style="width: 6%" scope="col"><b>Source</b></th>
+                <th style="width: 72%" scope="col"><b>URL</b></th>
+                <th style="width: 10%" scope="col"><b>Accuracy</b></th>
+                <!-- <th scope="col"><b>Accuracy Number</b></th> -->
+                <th style="width: 12%" scope="col"><b>Political Leaning</b></th>
               </tr>
             </thead>
             <tbody id="table-body">
@@ -88,7 +46,7 @@
         let body = document.getElementById("table-body")
         // check if the body has result, if yes, remove everything first
         while (body.hasChildNodes()) {
-        body.removeChild(body.firstChild);
+          body.removeChild(body.firstChild);
         }
         // prevent empty input
         if (url == "") {
@@ -116,18 +74,21 @@
 
             for (const res of result) {
               let new_row = document.createElement('tr');
+              let data_1 = document.createElement("td");
+              data_1.innerHTML = res["source"]
               let data_2 = document.createElement("td");
-              data_2.innerHTML = `<a href="`+ res["url"] +`target="_blank">` + res["url"] + `</a>`
+              data_2.innerHTML = `<a href="`+ res["url"] +`">` + res["url"] + `</a>`
               let data_3 = document.createElement("td");
               data_3.innerHTML = res["Accuracy"];
-              let data_4 = document.createElement("td");
-              data_4.innerHTML = res["Accuracy_num"];
+              // let data_4 = document.createElement("td");
+              // data_4.innerHTML = res["Accuracy_num"];
               let data_5 = document.createElement("td");
               data_5.innerHTML = res["Bias"];
 
+              new_row.appendChild(data_1);
               new_row.appendChild(data_2);
               new_row.appendChild(data_3);
-              new_row.appendChild(data_4);
+              // new_row.appendChild(data_4);
               new_row.appendChild(data_5);
               body.appendChild(new_row)
             }
