added titles as url anchors

--- a/templates/index.html
+++ b/templates/index.html
@@ -77,7 +77,7 @@
               let data_1 = document.createElement("td");
               data_1.innerHTML = res["source"]
               let data_2 = document.createElement("td");
-              data_2.innerHTML = `<a href="`+ res["url"] +`">` + res["url"] + `</a>`
+              data_2.innerHTML = `<a href="`+ res["url"] +`">` + res["title"] + `</a>`
               let data_3 = document.createElement("td");
               data_3.innerHTML = res["Accuracy"];
               // let data_4 = document.createElement("td");
