fixed bug in appending original article

--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
             <thead class="table-dark">
               <tr>
                 <th style="width: 6%" scope="col"><b>Source</b></th>
-                <th style="width: 72%" scope="col"><b>URL</b></th>
+                <th style="width: 72%" scope="col"><b>Title</b></th>
                 <th style="width: 10%" scope="col"><b>Accuracy</b></th>
                 <!-- <th scope="col"><b>Accuracy Number</b></th> -->
                 <th style="width: 12%" scope="col"><b>Political Leaning</b></th>
