--- a/templates/index.html
+++ b/templates/index.html
@@ -77,13 +77,24 @@
               let data_1 = document.createElement("td");
               data_1.innerHTML = res["source"]
               let data_2 = document.createElement("td");
-              data_2.innerHTML = `<a href="`+ res["url"] +`">` + res["url"] + `</a>`
+              // data_2.innerHTML = `<a href="`+ res["url"] +`">` + res["url"] + `</a>`
+              
+              let data_target = document.createElement('a');
+              data_target.target = "_blank";
+              data_target.href = res["url"];
+              data_target.innerText = res["url"];
+
+              data_2.appendChild(data_target);
+
+
               let data_3 = document.createElement("td");
               data_3.innerHTML = res["Accuracy"];
+              data_3.style.backgroundColor = res["accuracy_color"];
               // let data_4 = document.createElement("td");
               // data_4.innerHTML = res["Accuracy_num"];
               let data_5 = document.createElement("td");
               data_5.innerHTML = res["Bias"];
+              data_5.style.backgroundColor = res["bias_color"]
 
               new_row.appendChild(data_1);
               new_row.appendChild(data_2);
